# Remotery

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ENTITY_CLA.md  INDIVIDUAL_CLA.md  LICENSE  Remotery.pro  RemoteryConfig.cmake.in  pibfile  readme.md  remoteryConfig.cmake.in  travis.yml
.github/scripts/: android_env.sh  compile.bat  compile.sh  hashfunction.c  run_tests.bat  run_tests.sh
.github/workflows/: build.yml
doc/: ENTITY_CLA.md  INDIVIDUAL_CLA.md
lib/: Remotery.c  Remotery.h  RemoteryMetal.mm
sample/: dump.c  sample.c  thread.c
scripts/: compile.sh
typescript/: DOM.ts  DOM_Node.ts  Hash.ts  Math.ts  Test.ts  WM_Container.ts  WM_Control.ts  WM_ControlGraph.ts  WM_ControlSizer.ts  WM_ControlSnapper.ts  WM_Panel.ts  WM_PanelContainer.ts  WM_PanelGraph.ts  WM_PanelSizer.ts  WM_Ruler.ts  WM_Serialisation.ts  WM_Window.ts  remotery.js  remotery.js.map  tsconfig.json
vis/: index.html  indexTWO.html
vis/Code/: Console.js  DataViewReader.js  GridWindow.js  NameMap.js  PixelTimeRange.js  Remotery.js  SampleWindow.js  Shaders.js  ThreadFrame.js  TimelineRow.js  TimelineWindow.js  TitleWindow.js  TraceDrop.js  WebGL.js  WebGLFont.js  WebSocketConnection.js
vis/Styles/: Remotery.css
